plugins {
    id 'org.springframework.boot' version '2.7.1'
    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
    id 'com.google.cloud.tools.jib' version '3.2.0'
    id 'java'
}

group 'com.fastcampus.loan'
version '0.0.1-SNAPSHOT'
sourceCompatibility = '11'

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}


jib{
    from{
//        image = 'openjdk:11'
    }

    to{
        image = 'fastcampus-loan'
        tags = ['0.0.1']
    }

    container{
        mainClass = 'com.fastcampus.loan.LoanApplication'
        creationTime = 'USE_CURRENT_TIMESTAMP'
        format = 'OCI'
        volumes = ['/var/tmp']
        entrypoint = ['java',
        '-cp', '/app/resources:/app/classes:/app/libs/*',
        'com.fastcampus.loan.LoanApplication']
    }
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.modelmapper:modelmapper:3.1.0'
//    implementation 'org.springframework.boot:spring-boot-devtools'

    runtimeOnly 'mysql:mysql-connector-java'

    compileOnly 'com.h2database:h2'
    compileOnly 'org.projectlombok:lombok'

    annotationProcessor 'org.projectlombok:lombok'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

tasks.named('test') {
    useJUnitPlatform()
}
